--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
 radio_stations/.DS_Store
+tv_channels/.DS_Store
 tv_channels/m3u/generate_from_json.php
+radio_stations/m3u/generate_from_json.php
 .idea
